==============================================

New in this Isabelle version
----------------------------

*** General ***

* Discontinued obsolete method fastsimp / tactic fast_simp_tac, which
is called fastforce / fast_force_tac already since Isabelle2011-1.

* Updated and extended "isar-ref" manual, reduced remaining material
in old "ref" manual.


*** Pure ***

* Discontinued obsolete attribute "COMP".  Potential INCOMPATIBILITY,
use regular rule composition via "OF" / "THEN", or explicit proof
structure instead.  Note that Isabelle/ML provides a variety of
operators like COMP, INCR_COMP, COMP_INCR, which need to be applied
with some care where this is really required.


*** HOL ***

* Simproc "finite_Collect" rewrites set comprehensions into pointfree
expressions.

* Quickcheck:

  - added an optimisation for equality premises.
    It is switched on by default, and can be switched off by setting
    the configuration quickcheck_optimise_equality to false.    

* The SMT solver Z3 has now by default a restricted set of directly
supported features. For the full set of features (div/mod, nonlinear
arithmetic, datatypes/records) with potential proof reconstruction
failures, enable the configuration option "z3_with_extensions".
Minor INCOMPATIBILITY.

* Sledgehammer:

  - Rationalized type encodings ("type_enc" option).
  - Renamed options:
      max_relevant ~> max_facts
      relevance_thresholds ~> fact_thresholds


*** Document preparation ***

* Default for \<euro> is now based on eurosym package, instead of
slightly exotic babel/greek.


*** System ***

* Discontinued support for Poly/ML 5.2.1, which was the last version
without exception positions and advanced ML compiler/toplevel
configuration.



New in Isabelle2012 (May 2012)
------------------------------

*** General ***

* Prover IDE (PIDE) improvements:

  - more robust Sledgehammer integration (as before the sledgehammer
    command-line needs to be typed into the source buffer)